Arreglado funcionamiento de funcion filtro en el calendario